﻿V.9							19th February 2018

	Changes:
		You can now use the "interact" key in the main menu
		The time during which characters are angry is now fixed to 5.5s instead of being random

	Fixes:
		Fixes workshop level not appearing correctly in-game
		Fixes angry characters being slam by door to be still angy will being dizzy and possible after that
		Fixes Russian text alignment
		Fixes game crashing when starting the game on a Russian or Chinese system


V.8							15th February 2018

	Changes:
		Balanced time requirements for level 25, 42

	Fixes:
		Fixes a few sound incompatibility issues on Windows
		Fixes global star counter to reflect a 100% progression instead of a any%
		Fixes retirees having a non-angry animation after being healed while still being angry


V.7	(gold)					14th February 2018

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	Fixes:
		Fixes a problem with workshop level saves getting corrupted if the number of levels changes


V.6	(beta)					10th February 2018

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	New:
		99 levels
		All localizations are fully implemented
		Steam Workshop support (for the Steam version of the game and editor)
		Editor manual
		Endings
		New characters and levels		

	Changes:
		Revamped the title screen and main menu
		Auto-pause the game if a gamepad is disconnected
		Removed intro and endings from custom campaigns
		Reworked game feel

	Fixes:
		Fixes high DPI support for the editor
		Fixes high DPI support on Windows 10
		Fixes editor rendering on Windows 10 (it is no more blurry)


V.5 (alpha)					18th August 2017

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	New:
		Introduction cutscene:
			There is now a "0" level which will play a cutscene explaining why the kid is so greedy
		A couple new levels

	Changes: