@@ -1,4 +1,11 @@
-﻿V.9							19th February 2018
+﻿V.10						20th February 2018
+
+	Fixes:
+		Fixes MacOS crash when entering level selection
+		Fixes MacOS workshop folder scanning
+
+
+V.9							19th February 2018
 
 	Changes:
 		You can now use the "interact" key in the main menu
